bugfix: 1px gap between rows
class: 'rowfix' created to stop problem where it occurs. only apply to
problematic rows.

--- a/code/css/stylesheet.css
+++ b/code/css/stylesheet.css
@@ -16,6 +16,7 @@ body,html {
 
 body {
     background-color: rgb(255,255,255);
+    color: #000;
     background-size:cover;
     background-attachment:fixed;
     box-sizing:border-box;
@@ -119,57 +120,6 @@ ol, table, p, a, table, td, tr {
 		max-width:80px;
 	}
 
-.noise {
-    max-width: 100%;
-}
-
-.noise:hover
-{
-    opacity: 0;
-}
-
-.noise-xs {
-    max-width: 100%;
-    z-index: 1;
-}
-
-.noise-xs:hover
-{
-    opacity: 100;
-}
-	
-#noise {
-position:fixed;
-top:3%;
-left:0;
-right:0;
-text-align: center;
-display: block;
-z-index:501;
-	}
-	
-#namepadding{
-position: fixed;
-color: black;
-padding-top: 1px;
-font-family: 'Inconsolata', Courier, monospace;
-font-size: 0.85em;
-letter-spacing: 0.02em;  
-/* center the element */
-top:3%;
-right: 0;
-left: 0;
-margin-right: auto;
-margin-left: auto;
-/* give it dimensions */
-height:33px;
-width:102px;
-background-color:#fff;
-text-align: center;
-vertical-align: middle;
-line-height: 33px;  
-z-index: 500;
-	}	
 
 #header-container {
     position: fixed;
@@ -202,7 +152,9 @@ z-index: 500;
     image-rendering: optimize-contrast;         /* CSS3 Proposed                  */
     -ms-interpolation-mode: nearest-neighbor;   /* IE8+                           */
 }
-
+/* remove 1px between rows */
+div.rowfix:before, div.rowfix:after { 
+    content:none; }
 
 /* project pages */
  
@@ -243,14 +195,6 @@ p, h3, li {
     letter-spacing: 0.03em;
     padding-bottom: 0.5em;
     }  
-/*.projectcopy {
-    font-family: 'Inconsolata', Courier, monospace;
-    font-weight: 300;
-    font-size: 0.85em;
-    letter-spacing: 0.02em;
-    min-width: 5em;
-    padding: 7.5em 0em 7em 0em;
-    } */
 .projectcopy {
     font-family: 'Merriweather', serif; 
     font-weight: 300;
@@ -329,7 +273,7 @@ color: rgb(210,50,98);
 
 .whitebg {
     background-color: #fff;
-    z-index: 5;
+    z-index: 2;
     -webkit-transform: translate3d(0,0,0);
-    height:100%;
+    height: 100%;
 }
